Minor alignment fix

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   text-align: center;
   color: #fff;
   font-weight: bold;
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 0;
 }
 
@@ -45,6 +45,8 @@ span {
   text-align: center;
   display: flex;
   padding: 0;
+  font-size: 0.7em;
+  margin-top: -15px;
   align-items: center;
   justify-content: center;
 }
